{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 22,
  "lineage": "c6eb2449-c610-5b40-f9be-aabf88b49a68",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0048022d5251f4d43",
            "domain": "vpc",
            "id": "eipalloc-0048022d5251f4d43",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-75-101-145-28.compute-1.amazonaws.com",
            "public_ip": "75.101.145.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-nat-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-nat-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08bf5f4e7b7f96df4",
            "domain": "vpc",
            "id": "eipalloc-08bf5f4e7b7f96df4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-71-70-117.compute-1.amazonaws.com",
            "public_ip": "52.71.70.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-nat-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-nat-eip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823357529591:internet-gateway/igw-0e7841ad212fb0919",
            "id": "igw-0e7841ad212fb0919",
            "owner_id": "823357529591",
            "tags": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-igw"
            },
            "vpc_id": "vpc-0430f23f4cd1d0e6c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0048022d5251f4d43",
            "association_id": "eipassoc-07d7b418dd410cf22",
            "connectivity_type": "public",
            "id": "nat-0099f32b48e89b970",
            "network_interface_id": "eni-0d9732b455713c1d2",
            "private_ip": "10.0.1.121",
            "public_ip": "75.101.145.28",
            "subnet_id": "subnet-07eac1de926e775c3",
            "tags": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-nat-1"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08bf5f4e7b7f96df4",
            "association_id": "eipassoc-0e9b8f3f6cf8b9c9b",
            "connectivity_type": "public",
            "id": "nat-03f69d1a258c75eb3",
            "network_interface_id": "eni-0c94ed5c641b6506f",
            "private_ip": "10.0.2.110",
            "public_ip": "52.71.70.117",
            "subnet_id": "subnet-0f2506d64869a20c1",
            "tags": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-nat-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-nat-2"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823357529591:route-table/rtb-0002234f53089de28",
            "id": "rtb-0002234f53089de28",
            "owner_id": "823357529591",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0099f32b48e89b970",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0430f23f4cd1d0e6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823357529591:route-table/rtb-0f8b3af732a75127f",
            "id": "rtb-0f8b3af732a75127f",
            "owner_id": "823357529591",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03f69d1a258c75eb3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0430f23f4cd1d0e6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823357529591:route-table/rtb-0251523126b5d2bda",
            "id": "rtb-0251523126b5d2bda",
            "owner_id": "823357529591",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7841ad212fb0919",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0430f23f4cd1d0e6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0897e8f3863e8e184",
            "route_table_id": "rtb-0002234f53089de28",
            "subnet_id": "subnet-07669f38f2efdf99f"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0644f77a3fa94373d",
            "route_table_id": "rtb-0f8b3af732a75127f",
            "subnet_id": "subnet-0d3f64e82ddca4f03"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f62b2163a0170b0d",
            "route_table_id": "rtb-0251523126b5d2bda",
            "subnet_id": "subnet-07eac1de926e775c3"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0355a4e5bb5875e74",
            "route_table_id": "rtb-0251523126b5d2bda",
            "subnet_id": "subnet-0f2506d64869a20c1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823357529591:subnet/subnet-07669f38f2efdf99f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07669f38f2efdf99f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823357529591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-private-subnet-1"
            },
            "vpc_id": "vpc-0430f23f4cd1d0e6c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823357529591:subnet/subnet-0d3f64e82ddca4f03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3f64e82ddca4f03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "823357529591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-private-subnet-2"
            },
            "vpc_id": "vpc-0430f23f4cd1d0e6c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823357529591:subnet/subnet-07eac1de926e775c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07eac1de926e775c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "823357529591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-public-subnet-1"
            },
            "vpc_id": "vpc-0430f23f4cd1d0e6c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823357529591:subnet/subnet-0f2506d64869a20c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2506d64869a20c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "823357529591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-public-subnet-2"
            },
            "vpc_id": "vpc-0430f23f4cd1d0e6c"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:823357529591:vpc/vpc-0430f23f4cd1d0e6c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f6a3f53e3a22b3c8",
            "default_route_table_id": "rtb-0e397f95783db1adf",
            "default_security_group_id": "sg-0ab945cb482302acb",
            "dhcp_options_id": "dopt-021235d72e99fd5df",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0430f23f4cd1d0e6c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e397f95783db1adf",
            "owner_id": "823357529591",
            "tags": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taskmanager-saas-deployment-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}